Добавлена параллельная обработка запросов
